--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
 
   <!--Call To Action Section Start-->
-  <section class="callto-section ">
+  <div class="callto-section ">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -530,7 +530,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
   <!--Call To Action Section End-->
 
   <!--Testimonial Section Start-->
@@ -612,7 +612,7 @@
 
 
   <!--Contact Section Start-->
-  <section class="contact-section">
+  <div class="contact-section">
     <div class="container">
       <div class="row row00">
         <div class="col-lg-12">
@@ -639,7 +639,7 @@
       </div>
       <a href="">SEND NOW <i class="fa-solid fa-right-long"></i></a>
     </div>
-  </section>
+  </div>
   <!--Contact Section Start-->
 
 
@@ -696,8 +696,8 @@
   <!--Owl Carousel JS File-->
   <script src="js/owl.carousel.min.js"></script>
   <!--theme JS file-->
-  <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javscript">
+  <script src="js/main.js"></script>
+  <script>
   
   </script>
 </body>
